--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "url": "https://github.com/furey",
   "license": "ISC",
   "dependencies": {
-    "lifx-tile-effects-framework": "github:furey/lifx-tile-effects-framework",
+    "lifx-tile-effects-framework": "github:furey/lifx-tile-effects-framework#semver:^1.0.0",
     "lodash.samplesize": "^4.2.0"
   }
 }
